--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
 
-@tailwind utilities;
+@import "tailwindcss";
+
+@theme {
+	--color-a0: #ffffff;
+	--color-a10: #f2f2f7;
+	--color-a50: #e9ecef;
+	--color-a100: #dee2e6;
+	--color-a200: #ced4da;
+	--color-a300: #adb5bd;
+	--color-a400: #868e96;
+	--color-a500: #777777;
+	--color-a600: #666666;
+	--color-a700: #555555;
+	--color-a800: #495057;
+	--color-a900: #343a40;
+	--color-a910: #212529;
+	--color-a920: #202224;
+	--color-a930: #1d1f21;
+	--color-a940: #191b1c;
+	--color-a950: #121212;
+	--color-a990: #0a0a0a;
+	--color-a1: #000000;
+}
 
 @layer utilities {
 	.maskProjectsTitle {
@@ -22,17 +44,6 @@
 }
 
 :root {
-	--bg: #fff;
-
-	--text-selection-background: #121212;
-	--text-selection-foreground: #fff;
-
-	--gradientConicWelcomeBubble: conic-gradient(from 120deg,
-			#ddd 10%, #fff, #ddd 99%);
-	--borderGradientConicWelcomeBubble: none;
-}
-
-#rootDarkMode {
 	--bg: #121212;
 
 	--text-selection-background: #f2f2f7;
