--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,14 +1,15 @@
 ---
-import '../css/Welcome.css';
+import DotGrid from '@src/views/DotGrid.tsx';
 import {
   IconCSS,
   IconReact,
   IconTailwind,
   IconTypescript,
 } from './icons/technologies';
+import '../css/Welcome.css';
 ---
 
-<script>
+<!-- <script>
   window.addEventListener('DOMContentLoaded', function () {
     const img: HTMLElement = document.querySelector('.welcomeUserImg');
     const height = img.clientHeight;
@@ -35,9 +36,80 @@ import {
     rotateY(0)`;
     });
   });
-</script>
+</script> -->
+<div
+  style={{ width: '100%', height: '600px', position: 'relative' }}
+  class='min-h-screen dark:bg-black flex items-center justify-center'
+>
+  <DotGrid
+    client:load
+    dotSize={5}
+    gap={15}
+    baseColor='#271E37'
+    activeColor='#5227FF'
+    proximity={120}
+    shockRadius={250}
+    shockStrength={5}
+    resistance={750}
+    returnDuration={1.5}
+    className='absolute! inset-0!'
+  />
+  <article
+    class='w-140 flex flex-col absolute gap-2 justify-center items-center'
+  >
+    <div
+      class={`h-45.5 w-45.5 bg-contain bg-[url("/user.webp")] relative rounded-[30%_70%_24%76%/_65%_28%_72%_35%] welcomeUserImg`}
+    >
+      <div class='absolute bottom-4 left-0 -translate-x-1/2 top-auto'>
+        <div class='bubble shadow-[4px_4px_8px_1px_#0000003d]'>
+          <IconTypescript height='28' />
+        </div>
+      </div>
 
-<section
+      <div class='absolute top-[-1.2rem] left-1/4 -translate-x-1/2'>
+        <div class='bubble shadow-[4px_4px_8px_1px_#0000003d]'>
+          <IconReact height='28' />
+        </div>
+      </div>
+
+      <div class='absolute top-auto left-auto bottom-4 -right-2'>
+        <div class='bubble shadow-[4px_4px_8px_1px_#0000003d]'>
+          <IconTailwind height='30' />
+        </div>
+      </div>
+
+      <div class='absolute bottom-auto left-auto top-4 -right-2'>
+        <div class='bubble shadow-[4px_4px_8px_1px_#0000003d]'>
+          <IconCSS height='26' } />
+        </div>
+      </div>
+    </div>
+
+    <div class='h-[60%] w-[95%] mt-2 text-center'>
+      <h1
+        class='font-mono text-[2.7rem] tracking-[-1.3px] text-black dark:text-white'
+      >
+        Hello <span class='text-blue-500 dark:text-blue-200'>World</span>!
+      </h1>
+      <p
+        class='mt-2 text-[1.45rem] tracking-[-1px] leading-[1.7] text-black dark:text-gray-300'
+      >
+        I<span class='text-blue-500 dark:text-blue-200'>'</span>m Angel. <span
+          class='animated-text'
+        >
+          Software Engineer</span
+        >
+        <span class='font-mono text-base text-gray-400 dark:text-white mx-1.5'
+          >&&</span
+        > Frontend developer, that loves to build gorgeous <span
+          class='text-blue-400 dark:text-blue-300'>software</span
+        >
+        experiences<span class='text-blue-400 dark:text-blue-200'>;</span>
+      </p>
+    </div>
+  </article>
+</div>
+<!-- <section
   class='min-h-[100dvh] h-[100vh] w-full flex justify-center items-center bg-[radial-gradient(#00000010_3%,#fff_0)] bg-[length:5rem_5rem] dark:bg-[radial-gradient(#292929de_3%,#121212_0)]'
 >
   <main
@@ -96,4 +168,4 @@ import {
       </div>
     </article>
   </main>
-</section>
+</section> -->
