--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -13,31 +13,32 @@ import {
 } from '@src/constants/slider-projects';
 ---
 
-<section class='pt-72 bg-a0 dark:bg-a950' id='projects'>
+<section class='pt-52' id='projects'>
   <section class='w-full flex flex-col' style='container-type: inline-size;'>
     <header class='self-center w-[68%] flex flex-row relative justify-center'>
       <div
-        class='ml-2 size-20 rounded-xl grid place-content-center border border-solid border-a200 dark:border-a900 -rotate-20 bg-transparent'
+        class='ml-2 w-20 h-28 rounded-xl grid place-content-center border border-solid border-a900 -rotate-12 bg-transparent'
       >
         <PiRocketDuotone className='text-5xl text-gray-300' />
       </div>
       <div
-        class='-ml-4 -mt-10 scale-125 z-50 w-20 max-h-24 rounded-xl grid place-content-center bg-a0 shadow-2xl dark:bg-linear-to-t dark:from-[#191919] dark:to-[#272727] overflow-hidden'
+        class='-ml-4 -mt-3 scale-125 z-50 w-20 max-h-24 rounded-xl grid place-content-center shadow-2xl bg-linear-to-t from-a930 to-a900 overflow-hidden border border-a700'
       >
         <PiAppStoreLogoDuotone
           className='text-6xl text-blue-400 dark:text-blue-500'
         />
       </div>
       <div
-        class='-ml-4 size-20 rounded-xl grid place-content-center border border-solid border-a200 dark:border-a900 rotate-40 bg-transparent'
+        class='-ml-4 w-20 h-28 rounded-xl grid place-content-center border border-solid border-a900 rotate-20 bg-transparent'
       >
-        <PiCodeDuotone className='text-5xl text-gray-300' />
+        <PiCodeDuotone className='text-5xl text-gray-300 rotate-44' />
       </div>
     </header>
+
     <article
       class='text-[2rem] mt-6 md:text-[3rem] text-center flex flex-col items-center md:maskProjectsTitle md:dark:maskProjectsTitleDark'
     >
-      <h1 class='dark:text-white tracking-tight'>In Production!</h1>
+      <h1 class='font-medium text-white tracking-tight'>In Production!</h1>
     </article>
 
     <article
