--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,13 +39,13 @@ import Welcome from '../components/Welcome.astro';
       <aside class='flex items-center gap-x-2'>
         <a
           href='#projects'
-          class='no-underline border-none outline-none px-5! transition-colors flex items-center justify-between h-10 rounded-full text-base text-white duration-300 hover:bg-white hover:text-black'
+          class='no-underline border-none outline-none px-5! transition-all flex items-center justify-between h-10 rounded-full text-base text-white duration-500 bg-transparent hover:bg-white hover:text-black'
         >
           Projects
         </a>
         <a
           href='#experience'
-          class='no-underline border-none outline-none px-5! transition-colors flex items-center justify-between h-10 rounded-full text-base text-white duration-300 hover:bg-white hover:text-black'
+          class='no-underline border-none outline-none px-5! transition-all flex items-center justify-between h-10 rounded-full text-base text-white duration-500 bg-transparent hover:bg-white hover:text-black'
         >
           Experience
         </a>
