--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -42,8 +42,12 @@ import {
     </article>
 
     <article
-      class='mt-16 pt-10 relative grid gap-x-4 gap-y-[2.2rem] grid-cols-[repeat(auto-fit,minmax(21rem,1fr))] w-full justify-items-center bg-linear-to-t from-white to-white dark:bg-linear-to-t dark:from-[#101010] dark:to-[#151515]'
+      class='mt-16 pt-32 relative grid gap-x-4 gap-y-[2.2rem] grid-cols-[repeat(auto-fit,minmax(21rem,1fr))] w-full justify-items-center bg-linear-to-t from-white to-white dark:bg-linear-to-t dark:from-[#101010] dark:to-[#151515]'
     >
+      <header
+        class='absolute left-1/2 top-0 w-[80%] h-px select-none pointer-events-none -translate-x-1/2 translate-y-1/2 self-center bg-linear-to-r from-transparent via-gray-200 dark:via-gray-500 to-transparent'
+      >
+      </header>
       <Project
         name='Flego'
         platform='multiplatform'
