--- a/src/App.css
+++ b/src/App.css
@@ -43,25 +43,13 @@
 	}
 }
 
-:root {
-	--bg: #121212;
-
-	--text-selection-background: #f2f2f7;
-	--text-selection-foreground: #181818;
-
-	--gradientConicWelcomeBubble: conic-gradient(from -45deg,
-			#171717 10%, #000, #171717 90%);
-	--borderGradientConicWelcomeBubble: conic-gradient(from 20deg,
-			transparent 60%, #6f6f6f, transparent);
-}
-
 * {
 	box-sizing: border-box;
 }
 
 body {
 	font-family: "Inter", system-ui;
-	background: var(--bg);
+	background: #121212;
 	overflow-x: hidden;
 }
 
@@ -70,33 +58,8 @@ html {
 }
 
 ::selection {
-	background-color: var(--text-selection-background);
-	color: var(--text-selection-foreground);
-}
-
-.hidden {
-	display: none;
-}
-
-@keyframes enteringMenuNavBar {
-	0% {
-		transform: scale(0.2) translateX(64px) translateY(-64px);
-		opacity: 0;
-	}
-
-	60% {
-		transform: scale(1.15);
-		opacity: 1;
-	}
-
-	100% {
-		transform: scale(1) translateX(0) translateY(0);
-		opacity: 1;
-	}
-}
-
-.keyframe-entering-navbar {
-	animation: enteringMenuNavBar 0.5s ease;
+	background-color: #fff;
+	color: #000;
 }
 
 .customTitle {
