02 - Theme adjustments and some basic design issues had been fixed.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -71,7 +71,7 @@ import Welcome from '@src/components/Welcome.astro';
       <a href='https://www.instagram.com/valenciaarcega/' target='_blank'>
         <img
           src='./favicon.webp'
-          class='self-center justify-self-center size-10'
+          class='self-center justify-self-center size-10 h-10 w-10'
           alt='Personal logo at navigation bar'
         />
       </a>
