--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,30 +6,26 @@ import {
 } from 'react-icons/hi2';
 
 const card =
-  'max-w-[22rem] min-w-[22rem] w-[22rem] p-4 py-6 rounded-3xl relative flex-col dark:bg-gradient-to-t dark:from-black dark:to-[#171717]';
+  'max-w-[22rem] min-w-[22rem] w-[22rem] p-4 py-6 rounded-3xl relative flex-col bg-gradient-to-t from-black to-[#171717]';
 const wrIcon = 'h-14 w-14 rounded-2xl flex items-center justify-center';
-const emphasis = 'text-green-500 dark:text-green-200';
-const txtTitle =
-  'mt-2 text-[#aeaeae] font-medium text-base dark:text-[#6a6a6a]';
-const txtDesc = 'text-xl font-semibold mt-4 dark:text-white';
-const txtFooter = 'text-[#aeaeae] text-sm dark:text-gray-500 mt-2';
+const emphasis = 'text-green-200';
+const txtTitle = 'mt-2 font-medium text-base text-[#6a6a6a]';
+const txtDesc = 'text-xl font-semibold mt-4 text-white';
+const txtFooter = 'text-sm text-gray-500 mt-2';
 const lineGradient =
-  'absolute left-1/2 top-0 w-[80%] h-[1px] select-none pointer-events-none -translate-x-1/2 translate-y-1/2 self-center bg-gradient-to-r from-transparent via-gray-200 dark:via-green-900 to-transparent';
+  'absolute left-1/2 top-0 w-[80%] h-[1px] select-none pointer-events-none -translate-x-1/2 translate-y-1/2 self-center bg-gradient-to-r from-transparent via-green-900 to-transparent';
 ---
 
 <section
   id='experience'
   class='mt-[16.3rem] grid place-items-center gap-y-4 px-4'
 >
-  <h1 class='tracking-[-1px] text-5xl text-center text-black dark:text-white'>
-    Education <span class='text-blue-500 dark:text-blue-200'>
-      &
-    </span>Experience.
+  <h1 class='tracking-[-1px] text-5xl text-center text-white'>
+    Education <span class='text-blue-200'> & </span>Experience.
   </h1>
   <p class='text-center text-gray-400 leading-7'>
-    Where study and experience are <span class='text-black dark:text-white'
-      >enhanced</span
-    >. The places where the mind is formed.
+    Where study and experience are <span class='text-white'>enhanced</span>. The
+    places where the mind is formed.
   </p>
   <main
     class='h-fit w-full md:w-[90%] mt-8 grid gap-12 items-center justify-items-center grid-cols-[repeat(auto-fit,minmax(20rem,1fr))]'
@@ -37,14 +33,8 @@ const lineGradient =
     <article class={card}>
       <header class={lineGradient}></header>
 
-      <div
-        class={wrIcon +
-          ' bg-linear-to-b from-green-100 to-green-200 dark:from-green-950 dark:to-green-950/20'}
-      >
-        <HiOutlineAcademicCap
-          size={32}
-          className='text-green-600 dark:text-[#D9FDD3]'
-        />
+      <div class={wrIcon + ' bg-linear-to-b from-green-950 to-green-950/20'}>
+        <HiOutlineAcademicCap size={32} className='text-[#D9FDD3]' />
       </div>
 
       <p class={txtTitle}>University</p>
@@ -56,16 +46,10 @@ const lineGradient =
     </article>
 
     <article class={card}>
-      <header class={lineGradient + ' dark:via-orange-900'}></header>
+      <header class={lineGradient + ' via-orange-900'}></header>
 
-      <div
-        class={wrIcon +
-          ' bg-linear-to-brom-yellow-50 to-yellow-100 dark:from-orange-950 dark:to-orange-950/20'}
-      >
-        <HiOutlineBriefcase
-          size={32}
-          className='text-orange-400 dark:text-[#ffc8c8]'
-        />
+      <div class={wrIcon + ' bg-linear-to-b from-orange-950 to-orange-950/20'}>
+        <HiOutlineBriefcase size={32} className='text-[#ffc8c8]' />
       </div>
 
       <p class={txtTitle}>Current job</p>
@@ -76,16 +60,10 @@ const lineGradient =
     </article>
 
     <article class={card}>
-      <header class={lineGradient + ' dark:via-sky-900'}></header>
+      <header class={lineGradient + ' via-sky-900'}></header>
 
-      <div
-        class={wrIcon +
-          ' bg-linear-to-b from-purple-100 to-purple-200 dark:from-purple-950 dark:to-purple-950/20'}
-      >
-        <HiOutlineBookOpen
-          size={32}
-          className='text-purple-400 dark:text-purple-100'
-        />
+      <div class={wrIcon + ' bg-linear-to-b from-purple-950 to-purple-950/20'}>
+        <HiOutlineBookOpen size={32} className='text-purple-100' />
       </div>
 
       <p class={txtTitle}>Self-taught</p>
