--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -24,9 +24,7 @@ import {
       <div
         class='-ml-4 -mt-3 scale-125 z-50 w-20 max-h-24 rounded-xl grid place-content-center shadow-2xl bg-linear-to-t from-a930 to-a900 overflow-hidden border border-a700'
       >
-        <PiAppStoreLogoDuotone
-          className='text-6xl text-blue-400 dark:text-blue-500'
-        />
+        <PiAppStoreLogoDuotone className='text-6xl text-blue-500' />
       </div>
       <div
         class='-ml-4 w-20 h-28 rounded-xl grid place-content-center border border-solid border-a900 rotate-20 bg-transparent'
@@ -42,10 +40,10 @@ import {
     </article>
 
     <article
-      class='mt-16 pt-32 relative grid gap-x-4 gap-y-[2.2rem] grid-cols-[repeat(auto-fit,minmax(21rem,1fr))] w-full justify-items-center bg-linear-to-t from-white to-white dark:bg-linear-to-t dark:from-[#101010] dark:to-[#151515]'
+      class='mt-16 pt-32 relative grid gap-x-4 gap-y-[2.2rem] grid-cols-[repeat(auto-fit,minmax(21rem,1fr))] w-full justify-items-center bg-linear-to-t from-[#101010] to-[#151515]'
     >
       <header
-        class='absolute left-1/2 top-0 w-[80%] h-px select-none pointer-events-none -translate-x-1/2 translate-y-1/2 self-center bg-linear-to-r from-transparent via-gray-200 dark:via-gray-500 to-transparent'
+        class='absolute left-1/2 top-0 w-[80%] h-px select-none pointer-events-none -translate-x-1/2 translate-y-1/2 self-center bg-linear-to-r from-transparent via-gray-500 to-transparent'
       >
       </header>
       <Project
@@ -80,7 +78,7 @@ import {
   </section>
 
   <header
-    class='absolute left-1/2 top-0 w-[80%] h-px select-none pointer-events-none -translate-x-1/2 bg-linear-to-r from-transparent via-[#cdccccab] to-transparent dark:bg-linear-to-r dark:from-transparent dark:via-[#c6c6c6ab] dark:to-transparent'
+    class='absolute left-1/2 top-0 w-[80%] h-px select-none pointer-events-none -translate-x-1/2 bg-linear-to-r from-transparent via-[#c6c6c6ab] to-transparent'
   >
   </header>
 
@@ -95,7 +93,7 @@ import {
 </section>
 
 <section
-  class='relative py-32 flex justify-center w-full items-center dark:bg-[#101010]'
+  class='relative py-32 flex justify-center w-full items-center bg-[#101010]'
 >
   <!-- Circles behind blur view -->
   <div class='h-12 w-12 bg-[#04ddff] rounded-full'></div>
@@ -105,9 +103,7 @@ import {
     class='absolute inset-0 flex gap-y-3 backdrop-blur-2xl flex-col items-center justify-center'
   >
     <IconReact className='spin-scale' height='84' />
-    <h1
-      class='text-3xl text-center text-black dark:text-white font-medium tracking-tight'
-    >
+    <h1 class='text-3xl text-center text-white font-medium tracking-tight'>
       So much
       <span class='text-[#00D8FF]'>Native</span> magic<span
         class='text-[#00D8FF]'>.</span
@@ -120,7 +116,7 @@ import {
 </section>
 
 <section
-  class='dark:bg-linear-to-b dark:from-[#101010] dark:to:black w-full text-center overflow-hidden relative'
+  class='bg-linear-to-b from-[#101010] to:black w-full text-center overflow-hidden relative'
 >
   <article class='wrapperSlider'>
     {
