--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -14,7 +14,7 @@ const tecnologyWrapper =
 
 <section
   style={{ width: '100%', height: '600px', position: 'relative' }}
-  class='min-h-screen dark:bg-a950 flex items-center justify-center'
+  class='min-h-screen bg-a950 flex items-center justify-center'
 >
   <DotGrid
     client:load
@@ -61,25 +61,20 @@ const tecnologyWrapper =
     </main>
 
     <footer class='h-[60%] w-[95%] mt-2 text-center'>
-      <h1
-        class='font-mono text-[2.7rem] tracking-[-1.3px] text-black dark:text-white'
-      >
-        Hello <span class='text-blue-500 dark:text-blue-200'>World</span>!
+      <h1 class='font-mono text-[2.7rem] tracking-[-1.3px] text-white'>
+        Hello <span class='text-blue-200'>World</span>!
       </h1>
       <p
-        class='mt-2 text-[1.45rem] tracking-[-1px] leading-[1.7] text-black dark:text-gray-300'
+        class='mt-2 text-[1.45rem] tracking-[-1px] leading-[1.7] text-gray-300'
       >
-        I<span class='text-blue-500 dark:text-blue-200'>'</span>m Angel. <span
+        I<span class='text-blue-200'>'</span>m Angel. <span
           class='animated-text'
         >
           Software Engineer</span
         >
-        <span class='font-mono text-base text-gray-400 dark:text-white mx-1.5'
-          >&&</span
-        > Frontend developer, that loves to build gorgeous <span
-          class='text-blue-400 dark:text-blue-300'>software</span
-        >
-        experiences<span class='text-blue-400 dark:text-blue-200'>;</span>
+        <span class='font-mono text-base text-white mx-1.5'>&&</span> Frontend developer,
+        that loves to build gorgeous <span class='text-blue-300'>software</span>
+        experiences<span class='text-blue-200'>;</span>
       </p>
     </footer>
   </article>
